[project]
name = "cryopod"
version = "0.2.2"
description = "CLI for the cryopod.ai agent config backup and sync service"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["cli", "agent", "config", "backup", "sync"]
authors = [
    { name = "Scott Russell", email = "scott@artificerai.dev" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "cryptography>=43.0",
    "httpx>=0.27",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]

[project.scripts]
cryopod = "cryopod.cli:main"

[project.urls]
Homepage = "https://cryopod.ai"
Repository = "https://github.com/cryopod-ai/cryopod"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cryopod"]

[dependency-groups]
dev = [
    "athanore>=0.0.2; python_version >= '3.13'",
    "claude-code-sdk; python_version >= '3.13'",
    "plankapy>=2.3.0; python_version >= '3.13'",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "python-dotenv; python_version >= '3.13'",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cryopod"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
